; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_core.c_nf_unregister_afinfo.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_core.c_nf_unregister_afinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nf_afinfo = type { i64 }

@afinfo_mutex = common dso_local global i32 0, align 4
@nf_afinfo = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nf_unregister_afinfo(%struct.nf_afinfo* %0) #0 {
  %2 = alloca %struct.nf_afinfo*, align 8
  store %struct.nf_afinfo* %0, %struct.nf_afinfo** %2, align 8
  %3 = call i32 @mutex_lock(i32* @afinfo_mutex)
  %4 = load i32*, i32** @nf_afinfo, align 8
  %5 = load %struct.nf_afinfo*, %struct.nf_afinfo** %2, align 8
  %6 = getelementptr inbounds %struct.nf_afinfo, %struct.nf_afinfo* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = getelementptr inbounds i32, i32* %4, i64 %7
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @rcu_assign_pointer(i32 %9, i32* null)
  %11 = call i32 @mutex_unlock(i32* @afinfo_mutex)
  %12 = call i32 (...) @synchronize_rcu()
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @rcu_assign_pointer(i32, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @synchronize_rcu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
